#  Automake file for the RAPP Compute backend directory.

#  Copyright (C) 2005-2016, Axis Communications AB, LUND, SWEDEN
#
#  This file is part of RAPP.
#
#  RAPP is free software: you can redistribute it and/or modify
#  it under the terms of the GNU Lesser General Public License as published
#  by the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#  You can use the comments under either the terms of the GNU Lesser General
#  Public License version 3 as published by the Free Software Foundation,
#  either version 3 of the License or (at your option) any later version, or
#  the GNU Free Documentation License version 1.3 or any later version
#  published by the Free Software Foundation; with no Invariant Sections, no
#  Front-Cover Texts, and no Back-Cover Texts.
#  A copy of the license is included in the documentation section entitled
#  "GNU Free Documentation License".
#
#  RAPP is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
#  GNU Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License and a copy of the GNU Free Documentation License along
#  with RAPP. If not, see <http://www.gnu.org/licenses/>.

# Add the test subdirectory
SUBDIRS = . test

# Include all backends in the dist
EXTRA_DIST = \
 rc_vector.h \
 rc_vec_api.h \
 rc_vec_swar.h \
 rc_vec_mmx.h \
 rc_vec_sse.h \
 rc_vec_sse2.h \
 rc_vec_ssse3.h \
 rc_vec_altivec.h \
 rc_vec_vadmx.h \
 rc_vec_vadmx2.h \
 rc_vec_neon.h \
 rc_vec_vis.h \
 rc_vec_loongson2ef.h
